--- a/09-CSS-Positioning/homework/homework.html
+++ b/09-CSS-Positioning/homework/homework.html
@@ -18,6 +18,7 @@
       </span>
     </div>
     <div class="container">
+
       <h3>Ejercicio 1:</h3>
       <span id="ejercicioUno">
           En este primer ejercicio deberás asegurarte que el texto dentro de este &lt;span&gt;
@@ -28,6 +29,8 @@
           que sea "block" y centra el texto usando "text-align".
       </span>
     </div>
+
+
     <div class="container">
       <h3>Ejercicio 2:</h3>
       <span>
@@ -36,6 +39,9 @@
          sea mostrada. El id de lo que tenes que ocultar es "ejercicioDos".
       </span>
     </div>
+
+
+    
     <div class="container">
       <h3>Ejercicio 3:</h3>
       <span>
@@ -45,12 +51,13 @@
       </span>
       <div id="containerImagen">
         <div id="containerObjetivo"></div>
-        <img id="ejercicioTres" src="./assets/img/artic-fox.png" />
+        <img id="ejercicioTres" src="./assets/img/artic-fox.png" img />
         <div id="spanDescriptivo">
             <span>Esta es la imagen de un animal. Esperamos que disfrutes la imagen de este animal :-)</span>
         </div>
       </div>
     </div>
+
     <div class="container">
       <h3>Ejercicio 4:</h3>
       <span>
@@ -59,6 +66,7 @@
           El id de la caja es "ejercicioCuatro". Cambia la posición de esa caja a la esquina superior izquierda.
       </span>
     </div>
+
     <div id="ejercicioCuatro">
       <div id="ejercicioCinco">
         <span>#SoyHenry</span>
@@ -66,6 +74,7 @@
         <span>Lecciones de posicionamiento</span>
       </div>
     </div>
+    
     <div class="container">
       <h3>Ejercicio 5:</h3>
       <span>
