--- a/09-CSS-Positioning/homework/homework.html
+++ b/09-CSS-Positioning/homework/homework.html
@@ -84,6 +84,7 @@
           También queremos que cada elemento aparezca centrado verticalmente en la línea.
       </span>
     </div>
+
     <div class="container">
       <h3>Ejercicio 6:</h3>
       <span>
@@ -92,6 +93,7 @@
           Usando el mismo id que en el ejercicio anterior, cambia la dirección en el cual aparecen los elementos.
       </span>
     </div>
+
     <div class="container">
       <h3>Ejercicio 7:</h3>
       <span>
@@ -107,7 +109,7 @@
       <div id="elementoTres" class="elementos"><span class="textoElemento">Id "elementoTres"</span></div>
       <div id="elementoCuatro" class="elementos"><span class="textoElemento">Id "elementoCuatro"</span></div>
     </div>
-    <div class="container">
+    <div class="container">ñ
       <h3>Punto extra 1:</h3>
       <span>
           Hay bastantes opciones de flexbox y pueden complicarse, pero a través de la prática puedes aprender
